_skels/python-fastapi-ddd-skel/k8s/mk-example-project.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-project
spec:
  containers:
    - name: example-project-api
      image: example-project-api:0.1.0
      readinessProbe:
        httpGet:
          port: 8000
          path: "/health/readiness"
      livenessProbe:
        httpGet:
          port: 8000
          path: "/health/liveness"
      startupProbe:
        httpGet:
          port: 8000
          path: "/health/liveness"
        initialDelaySeconds: 15
        failureThreshold: 5
      ports:
        - containerPort: 8000
          name: http
